# etl_cicd

./: .env.example  .gitignore  Makefile  README.md  docker-compose.airflow.yaml  docker-compose.test.yaml  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: monitoring.yml  prod.yml  test.yml
airflow/: Dockerfile
airflow/config/: airflow_local_settings.py
airflow/dags/: etl_dag.py  test_python_async.py  test_python_simple.py
dags/: customers_elt.py
data_generator/: Dockerfile  db_connection.py  main.py  pyproject.toml
data_generator/scripts/: data_generation.py  insert_data.py
docs/: data_dictionary.md
entrypoints/db/: init.sql  init_olap.sql  init_oltp.sql
entrypoints/seed/: seed.sql
grafana/dashboards/: data_quality_dashboard.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasource.yaml
sql_scripts/etl/: extract.py  load.py  main.py  transform.py
sql_scripts/olap/: customer_dim.py  etl.py
src/db/: engine.py
src/sql_scripts/: oltp.py
src/sql_scripts/olap/: customer_dim.py  data_quality.py  etl.py  product_dim.py  sales_fact.py
tests/: conftest.py  test_create_tables.py  test_dq.py  test_olap.py  test_oltp.py  test_transform.py
